[gd_scene load_steps=3 format=3 uid="uid://va78tgiccyf3"]

[ext_resource type="Script" uid="uid://om0xqw7ssqoj" path="res://scenes/component/detection_component.gd" id="1_xi35p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xi35p"]
radius = 199.6

[node name="DetectionComponent" type="Area2D"]
script = ExtResource("1_xi35p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xi35p")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
